Adding a couple missing tune parameters

--- a/proceedings/tuning.tex
+++ b/proceedings/tuning.tex
@@ -101,11 +101,11 @@ The full set of tuned parameters and their uncertainties is shown in Table~\ref{
 \texttt{SigmaProcess:alphaSvalue}             &  0.130   & 0.144  & 0.126 $\pm$ 0.003 & 0.126 $\pm$ 0.001 & 0.133 $\pm$ 0.002 \\ \hline
 \texttt{BeamRemnants:primordialKThard}        &  1.8     & 1.72   & 1.825 $\pm$ 0.055 & 1.794 $\pm$ 0.011 & 1.785 $\pm$ 0.048 \\ \hline
 \texttt{SpaceShower:pT0Ref}                   &  2.0     & 1.30   & 1.668 $\pm$ 0.100 & 1.744 $\pm$ 0.078 & 1.721 $\pm$ 0.121 \\ \hline
-\texttt{SpaceShower:pTmaxFudge}               &          & 0.95   & 1.150 $\pm$ 0.054 & 1.071 $\pm$ 0.014 & 1.036 $\pm$ 0.034 \\ \hline
-\texttt{SpaceShower:pTdampFudge}              &          & 1.21   & 1.214 $\pm$ 0.058 & 1.157 $\pm$ 0.011 & 1.284 $\pm$ 0.040 \\ \hline
+\texttt{SpaceShower:pTmaxFudge}               &  1.0     & 0.95   & 1.150 $\pm$ 0.054 & 1.071 $\pm$ 0.014 & 1.036 $\pm$ 0.034 \\ \hline
+\texttt{SpaceShower:pTdampFudge}              &  1.0     & 1.21   & 1.214 $\pm$ 0.058 & 1.157 $\pm$ 0.011 & 1.284 $\pm$ 0.040 \\ \hline
 \texttt{SpaceShower:alphaSvalue}              &  0.1365  & 0.125  & 0.123 $\pm$ 0.003 & 0.126 $\pm$ 0.001 & 0.130 $\pm$ 0.003 \\ \hline
 \texttt{TimeShower:alphaSvalue}               &  0.1365  & 0.126  & 0.132 $\pm$ 0.001 & 0.131 $\pm$ 0.001 & 0.133 $\pm$ 0.000 \\ \hline
-\texttt{StringPT:sigma}                       &  0.335   &        & 0.348 $\pm$ 0.003 & 0.350 $\pm$ 0.003 & 0.333 $\pm$ 0.006 \\ \hline
+\texttt{StringPT:sigma}                       &  0.335   & 0.335  & 0.348 $\pm$ 0.003 & 0.350 $\pm$ 0.003 & 0.333 $\pm$ 0.006 \\ \hline
 \texttt{MultipartonInteractions:pT0Ref}       &  2.28    & 1.98   & 2.000 $\pm$ 0.100 & 2.181 $\pm$ 0.049 & 2.441 $\pm$ 0.148 \\ \hline
 \texttt{MultipartonInteractions:alphaSvalue}  &  0.130   & 0118   & 0.116 $\pm$ 0.003 & 0.126 $\pm$ 0.002 & 0.128 $\pm$ 0.003 \\ \hline
 \end{tabular}}
