small modifications to VBF section

--- a/proceedings/jet_sub.tex
+++ b/proceedings/jet_sub.tex
@@ -140,9 +140,9 @@ Quark/gluon tagging is a key benchmark for jet substructure studies and has been
 
 A further complication to q/g studies in general is that usually other analyses selections are optimised first and then q/g tagging is applied near the end of a selection chain.  This can make the use of q/g tagging sub-optimal and one may gain from relaxing other traditional requirements (e.g. $m_{jj}$ or $\Delta\eta_{jj}$) while tightening the q/g tagging selection. At Les Houches 2019, this interplay was investigated in the context of separating ggH from VBF Higgs production.
 
-The simulated samples of Higgs boson events are generated using the \Powheg  program for both ggH \cite{Campbell:2012am} and VBF \cite{Nason:2009ai} at NLO accuracy. To properly simulate the recoil of the final state particles caused by additional QCD radiation, \Powheg generator is interfaced with the \Pythia program \cite{Sjostrand:2014zea}. The Higgs boson is left undecayed and its mass is set at $M_H=125~\rm GeV$. The Parton Distribution Functions (PDF) used in this note are NNPDF3.0 \cite{Ball:2017nwa} for both the matrix element and parton shower simulations. The final states particles are then clustered into anti-$k_T$\cite{Cacciari:2008gp} jets of radius $R = 0.4$ using FastJet3 \cite{Cacciari:2011ma}. All jet constituents are required to have $|\eta| < 4.7$ and $p_T > 1\rm ~GeV$. Events with at least two jets with $p_T> 30\rm ~GeV$ and $|\eta|<4.7$ are kept.
+The simulated samples of Higgs boson events are generated using the \textsc{Powheg} program for both ggH \cite{Campbell:2012am} and VBF \cite{Nason:2009ai} at NLO accuracy. To properly simulate the recoil of the final state particles caused by additional QCD radiation, \textsc{Powheg} generator is interfaced with the \textsc{Pythia} program \cite{Sjostrand:2014zea}. The Higgs boson is left undecayed and its mass is set at $M_H=125~\rm GeV$. The Parton Distribution Functions (PDF) used in this note are NNPDF3.0 \cite{Ball:2017nwa} for both the matrix element and parton shower simulations. The final states particles are then clustered into anti-$k_T$\cite{Cacciari:2008gp} jets of radius $R = 0.4$ using FastJet3 \cite{Cacciari:2011ma}. All jet constituents are required to have $|\eta| < 4.7$ and $p_T > 1\rm ~GeV$. Events with at least two jets with $p_T> 30\rm ~GeV$ and $|\eta|<4.7$ are kept.
 
-The selected events are then used to train Machine Learning (ML) models using the \xgboost library~\cite{Chen:2016btl}. Two sets of jet-substructure variables, defined below, are computed to increase effectiveness in disguising VBF from ggF to kinematic only discriminant.
+The selected events are then used to train Machine Learning (ML) models using the \textsc{XGBoost} library~\cite{Chen:2016btl}. Two sets of jet-substructure variables, defined below, are computed to increase effectiveness in disguising VBF from ggF to kinematic only discriminant.
 \begin{itemize}
     \item Jet angularities \cite{Larkoski:2014pca} could be written as
     \begin{equation}
@@ -163,7 +163,7 @@ In addition to jet-substructure variables, event-level kinematic variables are d
     \item Transverse momentum of the two jets
 \end{itemize}
 
-The variables defined above are combined in three separate \xgboost models. The first model uses kinematic variables only. The second uses jet constituent multiplicities alongside the kinematic variables. The third and final model uses all the previously mentioned variables while adding jet substructure angularities. Every model is trained\footnote{\xgoost is used with the default training parameters.} in 3 different kinematic bins, $0\leq m_{jj}<350~\rm GeV$, $350\leq m_{jj} <700~\rm GeV$ and $m_{jj}\geq 700~\rm GeV$.
+The variables defined above are combined in three separate \textsc{XGBoost} models. The first model uses kinematic variables only. The second uses jet constituent multiplicities alongside the kinematic variables. The third and final model uses all the previously mentioned variables while adding jet substructure angularities. Every model is trained\footnote{\textsc{XGBoost} is used with the default training parameters.} in 3 different kinematic bins, $0\leq m_{jj}<350~\rm GeV$, $350\leq m_{jj} <700~\rm GeV$ and $m_{jj}\geq 700~\rm GeV$.
 
 \begin{figure}[h!]
   \centering
