--- a/proceedings/lh2019.bib
+++ b/proceedings/lh2019.bib
@@ -1,6 +1,59 @@
 % Encoding: UTF-8
 %% This BibTeX bibliography file was created using BibDesk.
 %% http://bibdesk.sourceforge.net/
+
+@article{Campbell:2012am,
+      author         = "Campbell, John M. and Ellis, R. Keith and Frederix,
+                        Rikkert and Nason, Paolo and Oleari, Carlo and Williams,
+                        Ciaran",
+      title          = "{NLO Higgs Boson Production Plus One and Two Jets Using
+                        the POWHEG BOX, MadGraph4 and MCFM}",
+      journal        = "JHEP",
+      volume         = "07",
+      year           = "2012",
+      pages          = "092",
+      doi            = "10.1007/JHEP07(2012)092",
+      eprint         = "1202.5475",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ph",
+      reportNumber   = "FERMILAB-PUB-12-040-T, CERN-PH-TH-2012-048",
+      SLACcitation   = "%%CITATION = ARXIV:1202.5475;%%"
+}
+@article{Nason:2009ai,
+      author         = "Nason, Paolo and Oleari, Carlo",
+      title          = "{NLO Higgs boson production via vector-boson fusion
+                        matched with shower in POWHEG}",
+      journal        = "JHEP",
+      volume         = "02",
+      year           = "2010",
+      pages          = "037",
+      doi            = "10.1007/JHEP02(2010)037",
+      eprint         = "0911.5299",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ph",
+      SLACcitation   = "%%CITATION = ARXIV:0911.5299;%%"
+}
+@inproceedings{Chen:2016btl,
+ author = {Chen, Tianqi and Guestrin, Carlos},
+ title = {{XGBoost}: A Scalable Tree Boosting System},
+ booktitle = {Proceedings of the 22nd ACM SIGKDD International Conference on Knowledge Discovery and Data Mining},
+ series = {KDD '16},
+ year = {2016},
+ isbn = {978-1-4503-4232-2},
+ location = {San Francisco, California, USA},
+ pages = {785--794},
+ numpages = {10},
+ url = {http://doi.acm.org/10.1145/2939672.2939785},
+ doi = {10.1145/2939672.2939785},
+ acmid = {2939785},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+ keywords = {large-scale machine learning},
+}
+
+
+
+
 @article{Bellm:2015jjp,
       author         = "Bellm, Johannes and others",
       title          = "{Herwig 7.0/Herwig++ 3.0 release note}",
