--- a/proceedings/jet_sub.tex
+++ b/proceedings/jet_sub.tex
@@ -142,7 +142,7 @@ A further complication to q/g studies in general is that usually other analyses 
 
 The simulated samples of Higgs boson events are generated using the \textsc{Powheg} program for both ggH \cite{Campbell:2012am} and VBF \cite{Nason:2009ai} at NLO accuracy. To properly simulate the recoil of the final state particles caused by additional QCD radiation, \textsc{Powheg} generator is interfaced with the \textsc{Pythia} program \cite{Sjostrand:2014zea}. The Higgs boson is left undecayed and its mass is set at $M_H=125~\rm GeV$. The Parton Distribution Functions (PDF) used in this note are NNPDF3.0 \cite{Ball:2017nwa} for both the matrix element and parton shower simulations. The final states particles are then clustered into anti-$k_T$\cite{Cacciari:2008gp} jets of radius $R = 0.4$ using FastJet3 \cite{Cacciari:2011ma}. All jet constituents are required to have $|\eta| < 4.7$ and $p_T > 1\rm ~GeV$. Events with at least two jets with $p_T> 30\rm ~GeV$ and $|\eta|<4.7$ are kept.
 
-The selected events are then used to train Machine Learning (ML) models using the \textsc{XGBoost} library~\cite{Chen:2016btl}. Two sets of jet-substructure variables, defined below, are computed to increase effectiveness in disguising VBF from ggF to kinematic only discriminant.
+The selected events are then used to train Machine Learning (ML) models using the \textsc{XGBoost} library~\cite{Chen:2016btl}. Two sets of jet-substructure variables, defined below, are computed to increase effectiveness in distinguishing VBF from ggF
 \begin{itemize}
     \item Jet angularities \cite{Larkoski:2014pca} could be written as
     \begin{equation}
